--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Github</string>
-    
+
     <string name="tab_1">Followers</string>
     <string name="tab_2">Following</string>
+    <string name="favorite_user">Favorite User</string>
 </resources>
